Fixes long status name wrapping

--- a/app/styles/modules/backlog/backlog-table.scss
+++ b/app/styles/modules/backlog/backlog-table.scss
@@ -32,8 +32,7 @@
             width: 100%;
         }
         .status {
-            flex-basis: 120px;
-            flex-grow: 0;
+            flex-grow: 1;
             flex-shrink: 0;
         }
         .points {
